# AGV-Custom-PPO-Training-Architecture-ROS2-Ign-Gazebo-Fortress-

./: README.md
rl_race/: CMakeLists.txt  package.xml  setup.py
rl_race/launch/: PPO_stack.launch.py  gz_bridge_config.yaml  mapping_stack.launch.py  race.launch.py  sfm_capture.launch.py
rl_race/rl_race/: set_pose_service.py  visualize_odometry.py
rl_race/scripts/: 1D2D.py  NN_params.keras  NN_params_424.keras  PPO_actor.py  PPO_demo.py  PPO_loss.py  PPO_policy_ANN.py  PPO_policy_CNN.py  PPO_policy_viz.py  PPO_reward_func.py  PPO_value_funcNN.py  bash.py  boundary_checker.py  center_line_viz.py  center_points.npy  center_points.txt  episodic_data_collector.py  img_perception_viz.py  learning_viz.py  lidar_points.npy  maping.py  nparray_viz.py  organizer.py  qlearning_demo.py  ranger.py  set_pose_service.py  test.py  test2.py  test4.py  visualize_odometry.py
rl_race/src/: bot_perception_node.cpp  center_line_plotter.cpp  collision_checker.cpp  lane_perception.cpp  lidar_states.cpp  q_learn_policy.cpp  the_judge.cpp  track_progression.cpp
rl_race/srv/: SetPose.srv
rl_race/trajectories/: latest_episode_data.txt
rl_race/worlds/: empty.sdf  shanghai3.0.stl
